2009-03-20  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#105850 - Implementing fallback for background images.

	* src/hd-backgrounds.c (get_background_for_view_from_theme,
	  get_background_for_view, hd_backgrounds_set_background,
	  hd_backgrounds_get_background): Implementing fallback for background
	  images.
	* src/hd-change-background-dialog.c
	  (hd_change_background_dialog_append_backgrounds,
	  hd_change_background_dialog_constructed,
	  hd_change_background_dialog_response): Image sets set all
	  backgrounds. Support fallback for background images.

	* debian/changelog: Update

2009-03-19  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-incoming-event-window.c (hd_incoming_event_window_realize):
	  Use undecorated rgba windows for incoming events. Fixes: NB#106312.

	* debian/changelog: Update

2009-03-18  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/control: Add dependencies for localizations.

	* src/hd-bookmark-shortcut.c (hd_bookmark_shortcut_update_from_gconf,
	  hd_bookmark_shortcut_expose_event): Do not scale in expose function.
	  Fixes: NB#102307.
	  (hd_bookmark_shortcut_class_init): Update text/shadow colors. Fixes:
	  NB#106506.

	* debian/changelog: Update

2009-03-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.17
	* configure.ac: 0.3.17

2009-03-16  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#105736 - Incoming event window theming.

	* src/Makefile.am:
	* src/hd-incoming-event-window.c (IMAGES_DIR, BACKGROUND_IMAGE_FILE,
	  timeout_id, bg_image, hd_incoming_event_window_realize,
	  hd_incoming_event_window_expose_event,
	  hd_incoming_event_window_dispose,
	  hd_incoming_event_window_class_init, hd_incoming_event_window_init):
	* src/test-incoming-event.c (main): Add incoming event window theming. 

2009-03-13  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#105332 - Fix desktop menu destroy bug.

	* src/hd-hildon-home-dbus.c (hd_hildon_home_dbus_show_edit_menu): Hide